<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2021 LiteKite Startup. All rights reserved.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="UnusedResources">

    <string name="app_name">kBoard</string>

    <!-- Description for English (US) keyboard subtype [CHAR LIMIT=25]
    (US) should be an abbreviation of United States to fit in the CHAR LIMIT. -->
    <string name="subtype_en_US">English (US)</string>

    <!-- Alternative keys for a. [DO NOT TRANSLATE] -->
    <string name="alternates_for_a">aàáâäæãåāª</string>
    <!-- Alternative keys for c. [DO NOT TRANSLATE] -->
    <string name="alternates_for_c">cçćč</string>
    <!-- Alternative keys for e. [DO NOT TRANSLATE] -->
    <string name="alternates_for_e">eèéêëēėę</string>
    <!-- Alternative keys for i. [DO NOT TRANSLATE] -->
    <string name="alternates_for_i">iîïíīįì</string>
    <!-- Alternative keys for l. [DO NOT TRANSLATE] -->
    <string name="alternates_for_l">lł</string>
    <!-- Alternative keys for n. [DO NOT TRANSLATE] -->
    <string name="alternates_for_n">nñń</string>
    <!-- Alternative keys for o. [DO NOT TRANSLATE] -->
    <string name="alternates_for_o">oôöòóœøōõº</string>
    <!-- Alternative keys for s. [DO NOT TRANSLATE] -->
    <string name="alternates_for_s">sßśš$</string>
    <!-- Alternative keys for u. [DO NOT TRANSLATE] -->
    <string name="alternates_for_u">uûüùúū</string>
    <!-- Alternative keys for y. [DO NOT TRANSLATE] -->
    <string name="alternates_for_y">yÿ</string>
    <!-- Alternative keys for z. [DO NOT TRANSLATE] -->
    <string name="alternates_for_z">zžźż</string>

</resources>
