<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2021 LiteKite Startup. All rights reserved.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
    android:keyHeight="@dimen/keyboard_key_size"
    android:keyWidth="@dimen/keyboard_key_size">

    <Row android:rowEdgeFlags="top">
        <Key
            android:keyEdgeFlags="left"
            android:keyLabel="q" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="w" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="e"
            android:popupCharacters="@string/alternates_for_e"
            android:popupKeyboard="@xml/keyboard_popup" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="r" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="t" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="y"
            android:popupCharacters="@string/alternates_for_y"
            android:popupKeyboard="@xml/keyboard_popup" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="u"
            android:popupCharacters="@string/alternates_for_u"
            android:popupKeyboard="@xml/keyboard_popup" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="i"
            android:popupCharacters="@string/alternates_for_i"
            android:popupKeyboard="@xml/keyboard_popup" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="o"
            android:popupCharacters="@string/alternates_for_o"
            android:popupKeyboard="@xml/keyboard_popup" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="p" />
        <Key
            android:codes="@integer/keycode_delete"
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:isRepeatable="true"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/ic_keyboard_backspace" />
    </Row>

    <Row>
        <Key
            android:horizontalGap="@dimen/keyboard_half_key_size"
            android:keyLabel="a"
            android:popupCharacters="@string/alternates_for_a"
            android:popupKeyboard="@xml/keyboard_popup" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="s"
            android:popupCharacters="@string/alternates_for_s"
            android:popupKeyboard="@xml/keyboard_popup" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="d" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="f" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="g" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="h" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="j" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="k" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="l"
            android:popupCharacters="@string/alternates_for_l"
            android:popupKeyboard="@xml/keyboard_popup" />
        <Key
            android:codes="@integer/keycode_return"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/ic_keyboard_return" />
    </Row>

    <Row>
        <Key
            android:keyEdgeFlags="left"
            android:keyLabel="\@" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="z"
            android:popupCharacters="@string/alternates_for_z"
            android:popupKeyboard="@xml/keyboard_popup" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="x" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="c"
            android:popupCharacters="@string/alternates_for_c"
            android:popupKeyboard="@xml/keyboard_popup" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="v" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="b" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="n"
            android:popupCharacters="@string/alternates_for_n"
            android:popupKeyboard="@xml/keyboard_popup" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="m" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="!" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="\?" />
        <Key
            android:codes="@integer/keycode_shift"
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:isModifier="true"
            android:isSticky="true"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/ic_keyboard_shift" />
    </Row>

    <Row android:rowEdgeFlags="bottom">
        <Key
            android:codes="@integer/keycode_close_keyboard"
            android:keyEdgeFlags="left"
            android:keyIcon="@drawable/ic_keyboard_close" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="_" />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="-" />
        <Key
            android:codes="@integer/keycode_space"
            android:horizontalGap="@dimen/keyboard_half_key_size"
            android:keyIcon="@drawable/ic_keyboard_space_bar"
            android:keyWidth="@dimen/keyboard_key_space_bar_width" />
        <Key
            android:horizontalGap="@dimen/keyboard_half_key_size"
            android:keyLabel="," />
        <Key
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyLabel="." />
        <Key
            android:codes="@integer/keycode_mode_change"
            android:horizontalGap="@dimen/keyboard_key_horizontal_tiny_gap"
            android:keyEdgeFlags="right"
            android:keyIcon="@drawable/ic_keyboard_symbol" />
    </Row>

</Keyboard>
